snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
e9f56cf554fed1551ab75ea91c3d35ed